[package]
name = "rubble"
description = "a slight blog system"
version = "0.3.3"
authors = ["Kilerd Chan <blove694@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
dotenv = "0.15.0"
openssl = "0.10.27"

# serde
serde = "1.0.104"
serde_derive = "1.0.104"

r2d2 = "0.8.8"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
diesel_derives = "1.4.1"
diesel_migrations = "1.4.0"

tera = "1.0.2"
pulldown-cmark = { version = "0.6.1", default-features = false }

chrono = { version = "0.4.10", features = ["serde"] }
rust-crypto = "0.2.36"

http = "0.2.0"
actix-web= "2.0.0"
actix-files = "0.2.1"
futures = "0.3.1"

# log
log = "0.4.8"
pretty_env_logger = "0.4.0"

time = "0.1"
rand = "0.7.3"
rss = "1.9.0"
actix = "0.9.0"
jsonwebtoken = "7.0.1"
actix-cors = "0.2.0"

actix-rt = "1.0.0"
once_cell = "1.3.1"
derive_more = "0.99.2"
